# mini-pandas

./: LICENSE.txt  README.md  TODO  pyproject.toml
mini_pandas/: README.md  df.py  vec.py
tests/: test_df.py  test_vec.py
