[tool.poetry]
name = "mini-pandas"
version = "0.1.0"
description = "Toy recreation of basic pandas functionality"
authors = ["Robin Neufeld <metavee@users.noreply.github.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
jupyterlab = "^3.4.5"
black = "^22.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
